CSS - fix tr spacing for booking list

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -106,7 +106,7 @@ input[type=submit]:hover {
 
 table {
     width: 100%;
-    margin-top: 28px;
+    margin-top: 28px;    
 }
 
 table td {
@@ -126,10 +126,9 @@ table td {
     border: none;
     cursor: pointer;
     color: #333;
-    margin: 0;
-
+    padding: 0;    
 }
 
 .fixed-width {
-    width: 50px;
+    width: 50px;        
 }
